# PSPRpgEngine

./: .gitignore  Makefile  README.md
.github/workflows/: ci.yml
docs/: architecture.md  roadmap.md
editor/: PSPRpgEditor.sln
editor/src/PSPRpgEditor.App/: BuildService.cs  EditorTheme.cs  MainForm.cs  PSPRpgEditor.App.csproj  Program.cs  SceneView.cs  StudioControls.cs  ToolchainService.cs
editor/src/PSPRpgEditor.Core/: GamePakCompiler.cs  ProjectModel.cs  ProjectSerializer.cs  ProjectValidator.cs
runtime/: CMakeLists.txt
runtime/include/psprpg/: game_pak.hpp  platform.hpp  renderer.hpp
runtime/src/: game_pak.cpp  main.cpp  platform_psp.cpp  renderer_psp.cpp
samples/demo_game/: demo.psprpg
samples/demo_game/Scenes/: bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb.scene.json
shared/docs/: project-format.md
shared/schemas/: project.schema.json  scene.schema.json
templates/empty_rpg/: game.psprpg
tests/PSPRpgEditor.Tests/: Program.cs
tools/: README.md
tools/PSPRpgAssetCompiler/: PSPRpgAssetCompiler.csproj  Program.cs
